RESOLVED FIXED273387
[GTK][WPE] Input method context doesn't always receive focus out
https://bugs.webkit.org/show_bug.cgi?id=273387
Summary [GTK][WPE] Input method context doesn't always receive focus out
Jani Hautakangas
Reported 2024-04-28 23:47:29 PDT
Virtual keyboard should be hidden when for example inserting text to google.com search and hitting enter (or any seach engine ex. duckduck.go and hitting enter). Focus goes out of the search text field but wk InputMethodContext never receives that notification and thus VKB is not hidden.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-28 23:47:40 PDT
Jani Hautakangas
Comment 2 2024-09-21 02:31:45 PDT
EWS
Comment 3 2024-09-22 22:41:35 PDT
Committed 284058@main (794e0d793eaa): <https://commits.webkit.org/284058@main> Reviewed commits have been landed. Closing PR #34029 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.