Cherry-pick 284058@main (794e0d793eaa). https://bugs.webkit.org/show_bug.cgi?id=273387

[GTK][WPE] Input method context doesn't always receive focus out
    https://bugs.webkit.org/show_bug.cgi?id=273387

    Reviewed by Carlos Garcia Campos.

    Virtual keyboard should hide on page load and reset focus

    The EditorClient was not notified of this event on WPE and GTK platforms,
    leading to the input method state not resetting properly.

    * Source/WebKit/WebProcess/WebPage/WebPage.cpp:
    (WebKit::WebPage::resetFocusedElementForFrame):
    * Source/WebKit/WebProcess/WebPage/glib/WebPageGLib.cpp:
    (WebKit::inputMethodStateForElement):
    (WebKit::WebPage::setInputMethodState):
    (WebKit::inputMethodSateForElement): Deleted.

    Canonical link: https://commits.webkit.org/284058@main

Canonical link: https://commits.webkit.org/282416.120@webkitglib/2.46